# 3gpp-tr-library

./: .gitignore  INDEX.md  LICENSE  README.md  requirements-dev.txt
.github/workflows/: ci.yml
TR-36.777/: README.md
TR-36.777/v15.0.0/annex-b-channel-modelling/: B-channel-modelling.md  B-channel-modelling.yaml
TR-36.777/v15.0.0/annex-b-channel-modelling/tables/: table-B-1.csv  table-B-2.csv  table-B-3.csv  table-B-4.csv  table-B.1.1-1.csv  table-B.1.1-2.csv  table-B.1.2-1.csv  table-B.1.2-2.csv
TR-38.901/: README.md
TR-38.901/v19.4.0/07-channel-models/: 7.4-pathloss.md  7.4-pathloss.yaml  7.5-fast-fading.md  7.5-fast-fading.yaml  7.9-isac-channel-model.md  7.9-isac-channel-model.yaml
docs/: CONTRIBUTING.md  adding-a-new-tr.md  section-template.md
references/: README.md
references/3gpp-R1-2509126/: README.md
references/3gpp-tr36777/v15.0.0/: README.md
references/3gpp-tr38901/v19.4.0/: README.md
schemas/: pathloss.yaml
tests/: conftest.py  test_cli.py  test_cross_format_consistency.py  test_cross_format_consistency_7_5.py  test_cross_format_consistency_7_9.py  test_cross_format_consistency_annexB.py  test_exhaustive_values.py  test_formula_reparse.py  test_introspect.py  test_invariants.py  test_models.py  test_source_reparse.py  test_structure.py  test_tr_api.py  test_values.py  test_values_7_5.py  test_values_7_9.py  test_values_annexB.py  test_verify_tables.py  test_versions.py
tools/: section_utils.py  verify_tables.py
tools/tr_api/: README.md  __init__.py  _loader.py  cli.py  introspect.py  models.py  pyproject.toml  tr36777.py  tr38901.py
(+49 files in other folders)
